--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+.ll {
+  width: 250px;
+}
+
 .container {
-  width: 1240px;
+  width: 1340px;
   margin: 0 auto;
   padding: 0 20px;
 }
