--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,21 @@
   color: #fff;
 }
 
-body::-webkit-scrollbar, 
+body::-webkit-scrollbar,
 .lla::-webkit-scrollbar {
   width: 0;
+}
+
+.lll {
+  overflow-y: scroll;
+  height: 220px;
+}
+
+.lll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.lll::-webkit-scrollbar-thumb {
+  background-color: purple;
+  border-radius: 10px;
 }
